# baio

./: .gitignore  README.md  baio.command
baio_workbench/: .gitignore  Dockerfile  Dockerfile.documentation  LICENSE.txt  README.txt  docker-compose-doc.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_doc.txt  start_compose.sh  startup.sh
baio_workbench/baio/: baio_app.py  streamlit_doc.md
baio_workbench/baio/data/output/: genome_explorerKH.C14.432.v1.B.ND1-1_R0_coordinates_v0.csv  test.txt
baio_workbench/baio/data/persistant_files/: constants.py
baio_workbench/baio/src/: chroma_db_loader.py
baio_workbench/baio/st_app/: __init__.py  agent_selection.py  file_manager.py  helper_functions.py
baio_workbench/baio/test/: test_blat.py  test_eutils.py
baio_workbench/biosnaker-genome/: KY.Chr2.2230.v1.SL1-1_R0_tot_seq.gb  output.csv  outputKY.Chr2.2230.v1.SL1-1_R0_coordinates.csv  rec_conc.gb  record.gb
baio_workbench/biosnaker-genome/genome/: final_annotation_sorted_fixed.gff.REMOVED.git-id  output.gft.REMOVED.git-id  predicted_cds.fasta.REMOVED.git-id  primary_assembly_BY_260923_CI_02.fa.REMOVED.git-id  primary_assembly_BY_260923_CI_02.fa.fai
baio_workbench/biosnaker-genome/output/: KH.L108.56.v1.B.SL1-1_R0.gb  KH.L108.56.v1.B.SL1-1_R0_raw.gb  KH.L108.56.v1.B.nonSL2-1_R0.gb  KH.L108.56.v1.B.nonSL2-1_R0_raw.gb  KY.Chr2.2230.v1.SL1-1_R0_coordinates.csv
baio_workbench/biosnaker-genome/src/: bioexplorer.py  explore.py  test.py
baio_workbench/doc/source/: conf.py
baio_workbench/docs/: doc.txt
baio_workbench/docs/source/: index.md
(+121 files in other folders)
